@startuml

title __MININET's Class Diagram__\n

  package com.company {
    class Adult {
    private ArrayList<Child> childID
    public void connectChild(Child child)
    public void displayChildren()
    }
  }
  

  package com.company {
    class Child {
    public void removeParent(Adult parent)
    public boolean isSibling(Child sibling)
    public boolean isChild(Adult parent1)
    public void displayParents()

    }
  }
  

  package com.company {
    class Driver {
    ArrayList<User> userList
    public void addUser(ArrayList<User> userList, User newUser)
    public void deleteUser(ArrayList<User> userList, User newUser)
    public User searchUser(ArrayList<User> userList,String name)
    public boolean exists(ArrayList<User> userList, User targetUser)
    public void run()

    }
  }
  

  package com.company {
    class MiniNet {
    public static  void main(String args[])
    }
  }
  

  package com.company {
    abstract class User {
     protected String name,status
        protected String image
        protected int age
        protected ArrayList<User> friendList
        public void displayDetails()
        public void addFriend(User addee)
        public boolean isFriend(String conn)
        public void updateprofile(String name,int age,String status)

    }
  }
  

  Adult -up-|> User
  Child -up-|> User
  Child o-- Adult : parentID1
  Child o-- Adult : parentID2


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
